--- a/suyigou_search_web/src/main/webapp/search.html
+++ b/suyigou_search_web/src/main/webapp/search.html
@@ -18,7 +18,7 @@
 
     </head>
 
-    <body ng-app="suyigou" ng-controller="searchController" ng-init="initSearch()">
+    <body ng-app="suyigou" ng-controller="searchController" ng-init="initSearch();locateKeywords()">
         <!-- 头部栏位 -->
         <!--页面顶部-->
         <div id="nav-bottom">
@@ -82,7 +82,7 @@
                                         <!--searchAutoComplete-->
                                         <div class="input-append">
                                             <input type="text" id="autocomplete" ng-model="searchMap.keywords" type="text" class="input-error input-xxlarge"/>
-                                            <button class="sui-btn btn-xlarge btn-danger" ng-click="search()" type="button">搜索</button>
+                                            <button class="sui-btn btn-xlarge btn-danger" ng-click="searchMap.pageNo='1';search()" type="button">搜索</button>
                                         </div>
                                     </form>
                                 </div>
@@ -166,6 +166,10 @@
                             <i class="sui-icon icon-tb-close" ng-click="removeSearchItem(key)">
                             </i>
                         </li>
+                        <li class="tag" ng-if="searchMap.price">价格：{{searchMap.price}}
+                            <i class="sui-icon icon-tb-close" ng-click="removeSearchItem('price')">
+                            </i>
+                        </li>
                     </ul>
                     <form class="fl sui-form form-dark">
                         <div class="input-control control-right">
@@ -177,7 +181,7 @@
                 </div>
                 <!--selector-->
                 <div class="clearfix selector">
-                    <div class="type-wrap" ng-if=" resultMap.categoryList!=null && searchMap.category == '' ">
+                    <div class="type-wrap" ng-if=" resultMap.categoryList !=null && searchMap.category == '' ">
                         <div class="fl key">商品分类</div>
                         <div class="fl value">
                             <span ng-repeat="category in resultMap.categoryList">
@@ -186,7 +190,7 @@
                         </div>
                         <div class="fl ext"></div>
                     </div>
-                    <div class="type-wrap logo" ng-if="resultMap.brandList != null && searchMap.brand == '' ">
+                    <div class="type-wrap logo" ng-if="resultMap.brandList != null && searchMap.brand == '' && keywordsIsBrand()==false">
                         <div class="fl key brand">品牌</div>
                         <div class="value logos">
                             <ul class="logo-list">
@@ -211,27 +215,27 @@
                         </div>
                         <div class="fl ext"></div>
                     </div>
-                    <div class="type-wrap">
+                    <div class="type-wrap" ng-if="resultMap.price == null && searchMap.price == '' ">
                         <div class="fl key">价格</div>
                         <div class="fl value">
                             <ul class="type-list">
                                 <li>
-                                    <a>0-500元</a>
+                                    <a ng-click="alterSearchMap('price','0-500')">0-500元</a>
                                 </li>
                                 <li>
-                                    <a>500-1000元</a>
+                                    <a ng-click="alterSearchMap('price','500-1000')">500-1000元</a>
                                 </li>
                                 <li>
-                                    <a>1000-1500元</a>
+                                    <a ng-click="alterSearchMap('price','1000-1500')">1000-1500元</a>
                                 </li>
                                 <li>
-                                    <a>1500-2000元</a>
+                                    <a ng-click="alterSearchMap('price','1500-2000')">1500-2000元</a>
                                 </li>
                                 <li>
-                                    <a>2000-3000元 </a>
+                                    <a ng-click="alterSearchMap('price','2000-3000')">2000-3000元 </a>
                                 </li>
                                 <li>
-                                    <a>3000元以上</a>
+                                    <a ng-click="alterSearchMap('price','3000-*')">3000元以上</a>
                                 </li>
                             </ul>
                         </div>
@@ -269,7 +273,7 @@
                         <div class="navbar-inner filter">
                             <ul class="sui-nav">
                                 <li class="active">
-                                    <a href="#">综合</a>
+                                    <a href="#" ng-click="sortSearch('','')">综合</a>
                                 </li>
                                 <li>
                                     <a href="#">销量</a>
@@ -281,7 +285,10 @@
                                     <a href="#">评价</a>
                                 </li>
                                 <li>
-                                    <a href="#">价格</a>
+                                    <a href="#" ng-click="sortSearch('price','asc')">价格升序</a>
+                                </li>
+                                <li>
+                                    <a href="#" ng-click="sortSearch('price','desc')">价格降序</a>
                                 </li>
                             </ul>
                         </div>
@@ -320,33 +327,22 @@
                     <div class="fr page">
                         <div class="sui-pagination pagination-large">
                             <ul>
-                                <li class="prev disabled">
-                                    <a href="#">«上一页</a>
+                                <li class="prev {{isTopPage()?'disabled':''}}">
+                                    <a ng-click="searchPage(resultMap.pageNo-1)">«上一页</a>
                                 </li>
-                                <li class="active">
-                                    <a href="#">1</a>
+                                <li class="dotted" ng-if="firstDot"><span>...</span></li>
+                                <li class="active {{isCurPage(pageId)?'disabled':''}}" ng-repeat="pageId in pageLabel">
+                                    <a ng-click="searchPage(pageId)">{{pageId}}</a>
                                 </li>
-                                <li>
-                                    <a href="#">2</a>
-                                </li>
-                                <li>
-                                    <a href="#">3</a>
-                                </li>
-                                <li>
-                                    <a href="#">4</a>
-                                </li>
-                                <li>
-                                    <a href="#">5</a>
-                                </li>
-                                <li class="dotted"><span>...</span></li>
-                                <li class="next">
-                                    <a href="#">下一页»</a>
+                                <li class="dotted" ng-if="lastDot"><span>...</span></li>
+                                <li class="next {{isEndPage()?'disabled':''}}">
+                                    <a ng-click="searchPage(resultMap.pageNo+1)">下一页»</a>
                                 </li>
                             </ul>
-                            <div><span>共10页&nbsp;</span><span>
+                            <div><span>共{{maxPageNo}}页&nbsp;</span><span>
       到第
-      <input type="text" class="page-num">
-      页 <button class="page-confirm" onclick="alert(1)">确定</button></span></div>
+      <input type="text" class="page-num" ng-model="gotoPage" placeholder="{{searchMap.pageNo}}">
+      页 <button class="page-confirm" ng-click="searchPage(gotoPage)">确定</button></span></div>
                         </div>
                     </div>
                 </div>
